--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=381,349
+Size=402,495
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=383,23
-Size=555,384
+Pos=404,23
+Size=1146,633
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=940,23
-Size=340,697
+Pos=1552,23
+Size=368,988
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=383,409
-Size=555,311
+Pos=404,658
+Size=1146,353
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Components]
-Pos=0,374
-Size=381,346
+Pos=0,520
+Size=402,491
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8391,13 +8391,15 @@ Size=1280,720
 Collapsed=0
 
 [Window][ Side Panel]
-Size=304,720
+Size=303,720
 Collapsed=0
+DockId=0x00000011,0
 
 [Window][ Projects]
-Pos=311,0
-Size=969,720
+Pos=305,0
+Size=975,720
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Choose XML File##ChooseXML]
 Pos=60,60
@@ -8411,10 +8413,16 @@ Collapsed=0
 DockId=0x00000009,1
 
 [Window][ Text Editor]
-Pos=383,23
-Size=555,384
+Pos=404,23
+Size=1146,633
 Collapsed=0
 DockId=0x00000007,1
+
+[Window][Debugging]
+ViewportPos=1690,517
+ViewportId=0x58F70F5E
+Size=266,233
+Collapsed=0
 
 [Table][0xCD1EABA0,4]
 RefScale=18
@@ -9785,21 +9793,23 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=100,192 Size=1280,697 Split=X Selected=0x57ACBA5B
-  DockNode              ID=0x00000003 Parent=0x8B93E3BD SizeRef=381,697 Split=Y Selected=0xB1CF606A
-    DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=301,349 Selected=0xB1CF606A
-    DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=301,346 Selected=0xACD52934
-  DockNode              ID=0x00000004 Parent=0x8B93E3BD SizeRef=897,697 Split=X
-    DockNode            ID=0x00000008 Parent=0x00000004 SizeRef=1195,988 Split=X
-      DockNode          ID=0x0000000F Parent=0x00000008 SizeRef=304,720 Selected=0xF784E5DD
-      DockNode          ID=0x00000010 Parent=0x00000008 SizeRef=974,720 Split=X
-        DockNode        ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
-          DockNode      ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
-            DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
-            DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-              DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=512,384 CentralNode=1 Selected=0x57ACBA5B
-              DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=512,311 Selected=0x3CB89FC3
-          DockNode      ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
-        DockNode        ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-    DockNode            ID=0x0000000A Parent=0x00000004 SizeRef=340,988 Selected=0xB3D94866
+DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+  DockNode                ID=0x00000011 Parent=0x8B93E3BD SizeRef=303,720 Selected=0xF784E5DD
+  DockNode                ID=0x00000012 Parent=0x8B93E3BD SizeRef=975,720 Split=X
+    DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=402,697 Split=Y Selected=0xB1CF606A
+      DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=301,349 Selected=0xB1CF606A
+      DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=301,346 Selected=0xACD52934
+    DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1516,697 Split=X
+      DockNode            ID=0x00000008 Parent=0x00000004 SizeRef=1146,988 Split=X
+        DockNode          ID=0x0000000F Parent=0x00000008 SizeRef=304,720 Selected=0xF784E5DD
+        DockNode          ID=0x00000010 Parent=0x00000008 SizeRef=974,720 Split=X
+          DockNode        ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
+            DockNode      ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
+              DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
+              DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
+                DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=512,633 CentralNode=1 Selected=0x57ACBA5B
+                DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=512,353 Selected=0x3CB89FC3
+            DockNode      ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
+          DockNode        ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
+      DockNode            ID=0x0000000A Parent=0x00000004 SizeRef=368,988 Selected=0xB3D94866
 
