Bloom (work-in progress), File options, Mouse Picking, Rebrand

--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=384,495
+Size=353,471
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=386,23
-Size=1211,733
+Pos=355,23
+Size=1291,614
 Collapsed=0
 DockId=0x00000007,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=1599,23
-Size=321,988
+Pos=355,639
+Size=1291,372
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=386,758
-Size=1211,253
+Pos=355,639
+Size=1291,372
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000A,1
 
 [Window][ Components]
-Pos=0,520
-Size=384,491
+Pos=0,496
+Size=353,515
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,9 +8287,10 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=196,111
-Size=589,331
+Pos=1648,23
+Size=272,988
 Collapsed=0
+DockId=0x00000014,0
 
 [Window][ Save Material##SaveMaterialDialog]
 Pos=22,22
@@ -8302,7 +8303,8 @@ Size=100,57
 Collapsed=0
 
 [Window][ Layers]
-Pos=245,-10
+ViewportPos=245,59
+ViewportId=0x593FA252
 Size=494,252
 Collapsed=0
 
@@ -8410,11 +8412,11 @@ Collapsed=0
 Pos=383,409
 Size=557,311
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x0000000A,1
 
 [Window][ Text Editor]
-Pos=386,23
-Size=1211,733
+Pos=355,23
+Size=1291,614
 Collapsed=0
 DockId=0x00000007,1
 
@@ -8428,6 +8430,12 @@ Collapsed=0
 Pos=1315,427
 Size=314,504
 Collapsed=0
+
+[Window][Vertical Browser]
+Pos=344,566
+Size=203,445
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0xCD1EABA0,4]
 RefScale=18
@@ -9825,24 +9833,62 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xD5831D42,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC2C0AA7A,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x92FC2446,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x48D75E19,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x0915A4F6,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6D592225,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEB91AF20,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD872DC62,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x99B0268D,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
-  DockNode                ID=0x00000011 Parent=0x8B93E3BD SizeRef=303,720 Selected=0xF784E5DD
-  DockNode                ID=0x00000012 Parent=0x8B93E3BD SizeRef=975,720 Split=X
-    DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=384,697 Split=Y Selected=0xB1CF606A
-      DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=301,495 Selected=0xB1CF606A
-      DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=301,491 Selected=0xACD52934
-    DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1534,697 Split=X
-      DockNode            ID=0x00000008 Parent=0x00000004 SizeRef=1211,988 Split=X
-        DockNode          ID=0x0000000F Parent=0x00000008 SizeRef=304,720 Selected=0xF784E5DD
-        DockNode          ID=0x00000010 Parent=0x00000008 SizeRef=974,720 Split=X
-          DockNode        ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
-            DockNode      ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
-              DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
-              DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-                DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=512,733 CentralNode=1 Selected=0x57ACBA5B
-                DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=512,253 Selected=0x3CB89FC3
-            DockNode      ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
-          DockNode        ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-      DockNode            ID=0x0000000A Parent=0x00000004 SizeRef=321,988 Selected=0xB3D94866
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1646,988 Split=X
+    DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
+    DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=353,697 Split=Y Selected=0xB1CF606A
+        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=342,332 Selected=0xB1CF606A
+        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=342,363 Selected=0xACD52934
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1291,697 Split=X
+        DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
+        DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
+          DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
+            DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
+              DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
+              DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
+                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,614 CentralNode=1 Selected=0x57ACBA5B
+                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,372 Split=X Selected=0xB3D94866
+                  DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=203,445 HiddenTabBar=1 Selected=0x0DE36A98
+                  DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0xB3D94866
+            DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
+          DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
+  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=272,988 Selected=0x59EB5E58
 
