Fixed stack overflow issue Added some lua log errors (app crashes on PANIC)

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,8 +1,9 @@
 {
-    "ambientLight": 0.1599999964237213,
+    "ambientLight": 0.4662300944328308,
+    "exposure": 1.0,
     "fullscreen_on_launch": false,
     "height": 720,
-    "mainScene": "assets/scenes/3d-physics.static",
+    "mainScene": "assets/scenes/main.vault",
     "name": "3D Physics",
     "resizable": true,
     "width": 1280
