--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=353,471
+Size=357,471
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=355,23
-Size=1291,614
+Pos=359,23
+Size=1188,648
 Collapsed=0
 DockId=0x00000007,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=355,639
-Size=1291,372
+Pos=359,673
+Size=1188,338
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=355,639
-Size=1291,372
+Pos=359,673
+Size=1188,338
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][ Components]
 Pos=0,496
-Size=353,515
+Size=357,515
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8260,7 +8260,7 @@ Size=959,557
 Collapsed=0
 
 [Window][Select Material##SelectMaterial]
-Pos=758,296
+Pos=873,319
 Size=727,600
 Collapsed=0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1648,23
-Size=272,988
+Pos=1549,23
+Size=371,988
 Collapsed=0
 DockId=0x00000014,0
 
@@ -8415,8 +8415,8 @@ Collapsed=0
 DockId=0x0000000A,1
 
 [Window][ Text Editor]
-Pos=355,23
-Size=1291,614
+Pos=359,23
+Size=1188,648
 Collapsed=0
 DockId=0x00000007,1
 
@@ -8436,6 +8436,30 @@ Pos=344,566
 Size=203,445
 Collapsed=0
 DockId=0x00000008,0
+
+[Window][ Projects]
+Size=853,720
+Collapsed=0
+
+[Window][ Settings]
+Pos=266,720
+Size=533,32
+Collapsed=0
+
+[Window][ Other]
+Pos=853,0
+Size=426,720
+Collapsed=0
+
+[Window][ Choose where to create this project ..##NewProject]
+Pos=202,9
+Size=931,565
+Collapsed=0
+
+[Window][ Choose a project to open ..##OpenProject]
+Pos=60,60
+Size=899,568
+Collapsed=0
 
 [Table][0xCD1EABA0,4]
 RefScale=18
@@ -9869,26 +9893,162 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x49A30E9B,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xC11BF271,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x2A7E8FDC,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x524BB6CC,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x3F86B801,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x0CC7A575,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x0114C6AD,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xBE5E5986,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x5AF48708,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x2D208B57,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xCD1DD809,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x5F1B7360,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xE66C6F66,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xA86BD339,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x1F9BE2B3,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xF070CDA1,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x83B65F76,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xC71FDDB8,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x7CEE9255,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xAFAED345,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x4780FC2B,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xD1DD7476,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x14C2BBF1,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x8E4AA39A,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x61A18C88,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x2D6709EA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x34BBC56E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x932B6377,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x388CB071,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0x248DB466,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEA62742A,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6CAAF92F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x733EB779,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x731DE8FC,4]
+RefScale=20
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1646,988 Split=X
+  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1547,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=353,697 Split=Y Selected=0xB1CF606A
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=357,697 Split=Y Selected=0xB1CF606A
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=342,332 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=342,363 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1291,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1188,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
             DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,614 CentralNode=1 Selected=0x57ACBA5B
-                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,372 Split=X Selected=0xB3D94866
+                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,648 CentralNode=1 Selected=0x57ACBA5B
+                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,338 Split=X Selected=0xB3D94866
                   DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=203,445 HiddenTabBar=1 Selected=0x0DE36A98
-                  DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0xB3D94866
+                  DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0x3CB89FC3
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=272,988 Selected=0x59EB5E58
+  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=371,988 Selected=0x59EB5E58
 
