--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=306,471
+Size=325,471
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=308,23
-Size=1056,627
+Pos=327,23
+Size=1231,670
 Collapsed=0
 DockId=0x00000007,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=308,652
-Size=1056,359
+Pos=327,695
+Size=1231,316
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=308,652
-Size=1056,359
+Pos=327,695
+Size=1231,316
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][ Components]
 Pos=0,496
-Size=306,515
+Size=325,515
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8260,7 +8260,7 @@ Size=959,557
 Collapsed=0
 
 [Window][Select Material##SelectMaterial]
-Pos=873,319
+Pos=579,319
 Size=727,600
 Collapsed=0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1366,23
-Size=554,988
+Pos=1560,23
+Size=360,988
 Collapsed=0
 DockId=0x00000014,0
 
@@ -8415,8 +8415,8 @@ Collapsed=0
 DockId=0x0000000A,1
 
 [Window][ Text Editor]
-Pos=308,23
-Size=1056,627
+Pos=327,23
+Size=1231,670
 Collapsed=0
 DockId=0x00000007,1
 
@@ -10033,26 +10033,42 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x37DE73E8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF57ED63B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF5D51EAE,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA16D389A,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1364,988 Split=X
+  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=918,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=306,697 Split=Y Selected=0xB1CF606A
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=325,697 Split=Y Selected=0xB1CF606A
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=342,332 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=342,363 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1056,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=591,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
             DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,627 CentralNode=1 Selected=0x57ACBA5B
-                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,359 Split=X Selected=0xB3D94866
+                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,670 CentralNode=1 Selected=0x57ACBA5B
+                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,316 Split=X Selected=0xB3D94866
                   DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=203,445 HiddenTabBar=1 Selected=0x0DE36A98
-                  DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0x3CB89FC3
+                  DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=554,988 Selected=0x59EB5E58
+  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=360,988 Selected=0x59EB5E58
 
