Added VRAM, Post Processing stuff (they don't get saved yet) and more stuff

--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=325,332
+Size=354,332
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=327,23
-Size=591,379
+Pos=356,23
+Size=563,368
 Collapsed=0
 DockId=0x00000007,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=327,404
-Size=591,316
+Pos=356,393
+Size=563,327
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=327,404
-Size=591,316
+Pos=356,393
+Size=563,327
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][ Components]
 Pos=0,357
-Size=325,363
+Size=354,363
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=920,23
-Size=360,697
+Pos=921,23
+Size=359,697
 Collapsed=0
 DockId=0x00000014,0
 
@@ -8415,8 +8415,8 @@ Collapsed=0
 DockId=0x0000000A,1
 
 [Window][ Text Editor]
-Pos=327,23
-Size=591,379
+Pos=356,23
+Size=563,368
 Collapsed=0
 DockId=0x00000007,1
 
@@ -8459,6 +8459,11 @@ Collapsed=0
 [Window][ Choose a project to open ..##OpenProject]
 Pos=60,60
 Size=899,568
+Collapsed=0
+
+[Window][Details]
+Pos=60,60
+Size=576,333
 Collapsed=0
 
 [Table][0xCD1EABA0,4]
@@ -10049,26 +10054,58 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xD796EDFF,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x01F9C0B0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xED9BD9E3,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xB923FFD7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEAFD5613,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x1F0A881D,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4BB2AE29,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6879084C,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=573,435 Size=1280,697 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=918,988 Split=X
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=38,130 Size=1280,697 Split=X Selected=0x57ACBA5B
+  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1559,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=325,697 Split=Y Selected=0xB1CF606A
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=354,697 Split=Y Selected=0xB1CF606A
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=342,332 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=342,363 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=591,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1203,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
             DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,670 CentralNode=1 Selected=0x57ACBA5B
-                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,316 Split=X Selected=0xB3D94866
+                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,659 CentralNode=1 Selected=0x57ACBA5B
+                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,327 Split=X Selected=0xB3D94866
                   DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=203,445 HiddenTabBar=1 Selected=0x0DE36A98
                   DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0x3CB89FC3
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=360,988 Selected=0x59EB5E58
+  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=359,988 Selected=0x59EB5E58
 
