--- a/assets/game.config
+++ b/assets/game.config
@@ -1,10 +1,30 @@
 {
-    "ambientLight": 0.23999999463558197,
+    "ambientLight": 1.0,
     "exposure": 1.0,
     "fullscreen_on_launch": false,
     "height": 720,
+    "layers": [
+        "Default"
+    ],
+    "linux_compiler": "g++",
     "mainScene": "assets/scenes/main.vault",
-    "name": "3D Physics",
+    "name": "Polyris",
+    "post_processing": {
+        "bloom": {
+            "enabled": false,
+            "threshold": 0.5
+        },
+        "chromatic_aberration": {
+            "intensity": 0.0
+        },
+        "enabled": false,
+        "vignette": {
+            "enabled": false,
+            "intensity": 0.05999999865889549,
+            "smoothness": 0.0
+        }
+    },
     "resizable": true,
-    "width": 1280
+    "width": 1280,
+    "windows_compiler": "x86_64-w64-mingw32-g++"
 }
