--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=354,332
+Size=354,471
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
 Pos=356,23
-Size=563,368
+Size=1203,644
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=356,393
-Size=563,327
+Pos=356,669
+Size=1203,342
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8243,24 +8243,24 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=356,393
-Size=563,327
+Pos=356,669
+Size=1203,342
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][ Components]
-Pos=0,357
-Size=354,363
+Pos=0,496
+Size=354,515
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Choose Script##ChooseScript]
-Pos=94,151
+Pos=601,151
 Size=959,557
 Collapsed=0
 
 [Window][Select Material##SelectMaterial]
-Pos=579,319
+Pos=458,356
 Size=727,600
 Collapsed=0
 
@@ -8287,10 +8287,10 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=921,23
-Size=359,697
+Pos=1561,23
+Size=359,988
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x00000015,0
 
 [Window][ Save Material##SaveMaterialDialog]
 Pos=22,22
@@ -8416,7 +8416,7 @@ DockId=0x0000000A,1
 
 [Window][ Text Editor]
 Pos=356,23
-Size=563,368
+Size=1203,644
 Collapsed=0
 DockId=0x00000007,1
 
@@ -8462,9 +8462,10 @@ Size=899,568
 Collapsed=0
 
 [Window][Details]
-Pos=60,60
-Size=576,333
+Pos=1561,657
+Size=359,354
 Collapsed=0
+DockId=0x00000016,0
 
 [Table][0xCD1EABA0,4]
 RefScale=18
@@ -10086,8 +10087,80 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xCE9311FA,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xA3E19E66,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x56F9A3F2,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4601F8B4,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x733981F8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xAE16DDB1,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF9FC93B9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xAB2053DA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC0B60688,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6D4293CB,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC936589D,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE17B6602,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x2937ED0E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4C620F84,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5C9A54C2,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA00016D7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x0F050DA6,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x17DAE412,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=38,130 Size=1280,697 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1559,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
@@ -10101,11 +10174,13 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=38,130 Size=1280
             DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,659 CentralNode=1 Selected=0x57ACBA5B
-                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,327 Split=X Selected=0xB3D94866
+                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,644 CentralNode=1 Selected=0x57ACBA5B
+                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,342 Split=X Selected=0xB3D94866
                   DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=203,445 HiddenTabBar=1 Selected=0x0DE36A98
                   DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0x3CB89FC3
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=359,988 Selected=0x59EB5E58
+  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=359,988 Split=Y Selected=0x59EB5E58
+    DockNode                ID=0x00000015 Parent=0x00000014 SizeRef=359,632 Selected=0x59EB5E58
+    DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=359,354 Selected=0xFC3EA205
 
