--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=354,332
+Size=354,511
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
 Pos=356,23
-Size=620,375
+Size=1239,610
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=356,400
-Size=620,320
+Pos=356,635
+Size=1239,376
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=356,400
-Size=620,320
+Pos=356,635
+Size=1239,376
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][ Components]
-Pos=0,357
-Size=354,363
+Pos=0,536
+Size=354,475
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=978,23
-Size=302,697
+Pos=1597,23
+Size=323,988
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8416,7 +8416,7 @@ DockId=0x0000000A,1
 
 [Window][ Text Editor]
 Pos=356,23
-Size=620,375
+Size=1239,610
 Collapsed=0
 DockId=0x00000007,1
 
@@ -10172,27 +10172,27 @@ RefScale=20
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=87,179 Size=1280,697 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1616,988 Split=X
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1595,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
       DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=354,697 Split=Y Selected=0xB1CF606A
-        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=342,332 Selected=0xB1CF606A
-        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=342,363 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1260,697 Split=X
+        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=342,511 Selected=0xB1CF606A
+        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=342,475 Selected=0xACD52934
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1239,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
             DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,666 CentralNode=1 Selected=0x57ACBA5B
-                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,320 Split=X Selected=0xB3D94866
+                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,610 CentralNode=1 Selected=0x57ACBA5B
+                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,376 Split=X Selected=0xB3D94866
                   DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=203,445 HiddenTabBar=1 Selected=0x0DE36A98
-                  DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0x3CB89FC3
+                  DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=302,988 Split=Y Selected=0x59EB5E58
+  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=323,988 Split=Y Selected=0x59EB5E58
     DockNode                ID=0x00000015 Parent=0x00000014 SizeRef=359,632 Selected=0x59EB5E58
     DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=359,354 Selected=0xFC3EA205
 
