--- a/imgui.ini
+++ b/imgui.ini
@@ -8160,7 +8160,7 @@ Collapsed=0
 [Window][Scene]
 Size=400,400
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][Hello world]
 Pos=270,119
@@ -8169,15 +8169,15 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=354,511
+Size=363,490
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=356,23
-Size=1239,610
+Pos=365,23
+Size=1292,693
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
@@ -8211,10 +8211,10 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=356,635
-Size=1239,376
+Pos=365,718
+Size=1292,293
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000008,0
 
 [Window][ Save Scene##SaveSceneDialog]
 ViewportPos=103,51
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=356,635
-Size=1239,376
+Pos=365,718
+Size=1292,293
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x00000008,1
 
 [Window][ Components]
-Pos=0,536
-Size=354,475
+Pos=0,515
+Size=363,496
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1597,23
-Size=323,988
+Pos=1659,23
+Size=261,988
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8356,31 +8356,31 @@ Collapsed=0
 Pos=378,23
 Size=1210,691
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x0000000A,1
 
 [Window][##ScenePanel]
 Pos=378,23
 Size=570,400
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][Scene Panel]
 Pos=378,23
 Size=570,400
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][ Scene Panel]
 Pos=378,23
 Size=1210,691
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][ Scene Panel]
 Pos=378,23
 Size=567,369
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][Dear ImGui Demo]
 ViewportPos=782,338
@@ -8401,7 +8401,7 @@ DockId=0x00000011,0
 Pos=305,0
 Size=975,720
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][Choose XML File##ChooseXML]
 Pos=60,60
@@ -8412,13 +8412,13 @@ Collapsed=0
 Pos=383,409
 Size=557,311
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
-Pos=356,23
-Size=1239,610
+Pos=365,23
+Size=1292,693
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x0000000A,1
 
 [Window][Debugging]
 ViewportPos=1690,517
@@ -8435,7 +8435,7 @@ Collapsed=0
 Pos=344,566
 Size=203,445
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
 
 [Window][ Projects]
 Size=853,720
@@ -8462,8 +8462,8 @@ Size=899,568
 Collapsed=0
 
 [Window][Details]
-Pos=1618,657
-Size=302,354
+Pos=1659,657
+Size=261,354
 Collapsed=0
 DockId=0x00000016,0
 
@@ -10171,28 +10171,40 @@ Column 0  Sort=0v
 RefScale=20
 Column 0  Sort=0v
 
+[Table][0xFFA1EAB0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xAB19CC84,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x8C359E00,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1595,988 Split=X
+  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1657,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=354,697 Split=Y Selected=0xB1CF606A
-        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=342,511 Selected=0xB1CF606A
-        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=342,475 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1239,697 Split=X
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=363,697 Split=Y Selected=0xACD52934
+        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=374,385 Selected=0xB1CF606A
+        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=374,389 Selected=0xACD52934
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=652,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
             DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,610 CentralNode=1 Selected=0x57ACBA5B
-                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,376 Split=X Selected=0xB3D94866
-                  DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=203,445 HiddenTabBar=1 Selected=0x0DE36A98
-                  DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=1371,445 Selected=0xB3D94866
+                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,693 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,293 Selected=0x3CB89FC3
+                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=323,988 Split=Y Selected=0x59EB5E58
+  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=261,988 Split=Y Selected=0x59EB5E58
     DockNode                ID=0x00000015 Parent=0x00000014 SizeRef=359,632 Selected=0x59EB5E58
     DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=359,354 Selected=0xFC3EA205
 
