Text Rendering + A time is displayed in HYPER_LOG now.

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,7 +1,7 @@
 {
     "ambientLight": 0.20000000298023224,
     "exposure": 1.0,
-    "fullscreen_on_launch": false,
+    "fullscreen_on_launch": true,
     "height": 720,
     "layers": [
         "Default"
