--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=482,490
+Size=309,490
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=484,23
-Size=1073,584
+Pos=311,23
+Size=1259,628
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=484,609
-Size=1073,402
+Pos=311,653
+Size=1259,358
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=484,609
-Size=1073,402
+Pos=311,653
+Size=1259,358
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
 Pos=0,515
-Size=482,496
+Size=309,496
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1559,23
-Size=361,988
+Pos=1572,23
+Size=348,988
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8415,8 +8415,8 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
-Pos=484,23
-Size=1073,584
+Pos=311,23
+Size=1259,628
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -8462,8 +8462,8 @@ Size=899,568
 Collapsed=0
 
 [Window][Details]
-Pos=1659,657
-Size=261,354
+Pos=1559,657
+Size=361,354
 Collapsed=0
 DockId=0x00000016,0
 
@@ -10199,15 +10199,23 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x0BFD77F8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6CAD2399,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1557,988 Split=X
+  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1570,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=482,697 Split=Y Selected=0xACD52934
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=309,697 Split=Y Selected=0xACD52934
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=374,385 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=374,389 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1073,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1259,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10215,12 +10223,12 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,9
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,584 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,402 Selected=0xB3D94866
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,628 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,358 Selected=0xB3D94866
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=361,988 Split=Y Selected=0x59EB5E58
+  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=348,988 Split=Y Selected=0x59EB5E58
     DockNode                ID=0x00000015 Parent=0x00000014 SizeRef=359,632 Selected=0x59EB5E58
     DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=359,354 Selected=0xFC3EA205
 
