C# Components + Hot reloading (YAY!)

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,5 +1,5 @@
 {
-    "ambientLight": 0.10000000149011612,
+    "ambientLight": 0.009999999776482582,
     "exposure": 1.0,
     "fullscreen_on_launch": true,
     "height": 720,
@@ -7,7 +7,7 @@
         "Default"
     ],
     "linux_compiler": "g++",
-    "mainScene": "assets/scenes/main.vault",
+    "mainScene": "assets/scenes/test3.vault",
     "name": "Polyris",
     "post_processing": {
         "bloom": {
