--- a/assets/game.config
+++ b/assets/game.config
@@ -1,5 +1,5 @@
 {
-    "ambientLight": 0.49000000953674316,
+    "ambientLight": 0.4300000071525574,
     "exposure": 1.0,
     "fullscreen_on_launch": true,
     "height": 720,
@@ -8,7 +8,7 @@
     ],
     "linux_compiler": "g++",
     "mainScene": "assets/scenes/test3.vault",
-    "name": "Polyris",
+    "name": "Test",
     "post_processing": {
         "bloom": {
             "enabled": false,
