Updated PROJECT_MENU code to work with new code structure, Added so that logos are loaded from the binary folder not the project folder

--- a/imgui.ini
+++ b/imgui.ini
@@ -8458,8 +8458,8 @@ Size=931,565
 Collapsed=0
 
 [Window][ Choose a project to open ..##OpenProject]
-Pos=60,60
-Size=899,568
+Pos=61,60
+Size=898,568
 Collapsed=0
 
 [Window][Details]
@@ -10218,6 +10218,10 @@ Column 0  Sort=0v
 
 [Table][0xFCB61CB9,4]
 RefScale=18
+Column 0  Sort=0v
+
+[Table][0x2A32A7D2,4]
+RefScale=20
 Column 0  Sort=0v
 
 [Docking][Data]
