--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=366,490
+Size=32,490
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=368,23
-Size=1182,676
+Pos=34,23
+Size=1516,954
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=368,701
-Size=1182,310
+Pos=34,979
+Size=1516,32
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=368,701
-Size=1182,310
+Pos=34,979
+Size=1516,32
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
 Pos=0,515
-Size=366,496
+Size=32,496
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8415,8 +8415,8 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
-Pos=368,23
-Size=1182,676
+Pos=34,23
+Size=1516,954
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -8438,7 +8438,6 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Projects]
-Pos=0,0
 Size=853,720
 Collapsed=0
 
@@ -10224,15 +10223,19 @@ Column 0  Sort=0v
 RefScale=20
 Column 0  Sort=0v
 
+[Table][0x50FFBD2E,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1550,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=366,697 Split=Y Selected=0xACD52934
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=32,697 Split=Y Selected=0xACD52934
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=374,385 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=374,389 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1182,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1516,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10240,8 +10243,8 @@ DockSpace                   ID=0x8B93E3BD Pos=0,92 Size=1920,988 Split=X Selecte
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,676 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,310 Selected=0x3CB89FC3
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,954 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,32 Selected=0xB3D94866
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
