--- a/imgui.ini
+++ b/imgui.ini
@@ -8175,7 +8175,7 @@ DockId=0x00000005,0
 
 [Window][ Scene]
 Pos=326,23
-Size=1224,954
+Size=1224,641
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=326,979
-Size=1224,32
+Pos=326,666
+Size=1224,345
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,8 +8243,8 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=326,979
-Size=1224,32
+Pos=326,666
+Size=1224,345
 Collapsed=0
 DockId=0x00000008,1
 
@@ -8416,7 +8416,7 @@ DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
 Pos=326,23
-Size=1224,954
+Size=1224,641
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -10243,8 +10243,8 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,9
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,954 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,32 Selected=0x3CB89FC3
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,641 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,345 Selected=0xB3D94866
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
