--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=344,489
+Size=407,345
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=346,23
-Size=1249,657
+Pos=409,23
+Size=546,369
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1920,988
+Size=1280,697
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=346,682
-Size=1249,329
+Pos=409,394
+Size=546,326
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=346,682
-Size=1249,329
+Pos=409,394
+Size=546,326
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
-Pos=0,514
-Size=344,497
+Pos=0,370
+Size=407,350
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1597,23
-Size=323,988
+Pos=957,23
+Size=323,697
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8416,8 +8416,8 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
-Pos=346,23
-Size=1249,657
+Pos=409,23
+Size=546,369
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -8463,10 +8463,15 @@ Size=898,568
 Collapsed=0
 
 [Window][Details]
-Pos=1134,657
-Size=368,354
+Pos=957,470
+Size=323,250
 Collapsed=0
 DockId=0x00000016,0
+
+[Window][DebugOpenAL]
+Pos=60,60
+Size=684,282
+Collapsed=0
 
 [Table][0xCD1EABA0,4]
 RefScale=18
@@ -10257,14 +10262,14 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=127,219 Size=1280,697 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1595,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=344,697 Split=Y Selected=0xACD52934
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=407,697 Split=Y Selected=0xACD52934
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=344,489 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=344,497 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1249,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1186,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10272,8 +10277,8 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,9
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,657 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,329 Selected=0x3CB89FC3
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,369 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,326 Selected=0x3CB89FC3
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
