--- a/assets/game.config
+++ b/assets/game.config
@@ -1,5 +1,5 @@
 {
-    "ambientLight": 0.20000000298023224,
+    "ambientLight": 1.0,
     "exposure": 1.0,
     "fullscreen_on_launch": true,
     "height": 720,
