--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=407,489
+Size=346,345
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=409,23
-Size=1186,660
+Pos=348,23
+Size=607,369
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1920,988
+Size=1280,697
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=409,685
-Size=1186,326
+Pos=348,394
+Size=607,326
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=409,685
-Size=1186,326
+Pos=348,394
+Size=607,326
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
-Pos=0,514
-Size=407,497
+Pos=0,370
+Size=346,350
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1597,23
-Size=323,632
+Pos=957,23
+Size=323,697
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8330,7 +8330,8 @@ Size=741,513
 Collapsed=0
 
 [Window][Build for Windows##BuildWindowsDialog]
-Pos=332,-58
+ViewportPos=469,148
+ViewportId=0x2EE08DF2
 Size=755,591
 Collapsed=0
 
@@ -8416,8 +8417,8 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
-Pos=409,23
-Size=1186,660
+Pos=348,23
+Size=607,369
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -10261,15 +10262,35 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x1F65A83F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x47C2944E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xABD54EF7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEC28BDE9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x175FE7DE,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=100,192 Size=1280,697 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1595,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=407,697 Split=Y Selected=0xACD52934
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=346,697 Split=Y Selected=0xACD52934
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=344,489 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=344,497 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1186,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=607,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
