--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,9 +8169,9 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=346,345
+Size=346,697
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000003,0
 
 [Window][ Scene]
 Pos=348,23
@@ -8249,10 +8249,10 @@ Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
-Pos=0,370
-Size=346,350
+ViewportPos=1369,141
+ViewportId=0xE96D2B21
+Size=346,347
 Collapsed=0
-DockId=0x00000006,0
 
 [Window][Choose Script##ChooseScript]
 Pos=601,151
@@ -8288,7 +8288,7 @@ Collapsed=0
 
 [Window][ Inspector]
 Pos=957,23
-Size=323,697
+Size=323,445
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8417,10 +8417,10 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
-Pos=348,23
+ViewportPos=1191,514
+ViewportId=0xEA648AC2
 Size=607,369
 Collapsed=0
-DockId=0x0000000A,1
 
 [Window][Debugging]
 ViewportPos=1690,517
@@ -8464,8 +8464,8 @@ Size=898,568
 Collapsed=0
 
 [Window][Details]
-Pos=1597,657
-Size=323,354
+Pos=957,470
+Size=323,250
 Collapsed=0
 DockId=0x00000016,0
 
@@ -10283,13 +10283,11 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=137,229 Size=1280,697 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=64,191 Size=1280,697 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1595,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=346,697 Split=Y Selected=0xACD52934
-        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=344,489 Selected=0xB1CF606A
-        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=344,497 Selected=0xACD52934
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=346,697 Selected=0xB1CF606A
       DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=607,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
@@ -10299,7 +10297,7 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=137,229 Size=128
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
                   DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,369 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,326 Selected=0x3CB89FC3
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,326 Selected=0xB3D94866
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
